Fix spacing issue for text inputs

--- a/client/src/scss/chat-window-styles.scss
+++ b/client/src/scss/chat-window-styles.scss
@@ -1,5 +1,5 @@
 h1{
-    margin: 1em auto;
+    text-align: center;
 }
 
 .message-list{
